添加RPC自动化测试

--- a/src/main/resources/env/test.properties
+++ b/src/main/resources/env/test.properties
@@ -1,8 +1,10 @@
 # 该文件用于配置各个环境特定的一些数据，例如服务地址等，DB连接名
-
 # URL
 admin.url.base=http://XXXX.XXXX.com
-
-
 # DB
 db.operation=test1_operation
+#ZK注册中心地址，当然可以别的注册中心地址
+zk.address=zookeeper://xxx.xxx.xxx.xxx:xxx
+# xxxRPC
+xxxRPC.version.v1=1.0.0
+xxxRPC.group=dubbo
