--- a/pom.xml
+++ b/pom.xml
@@ -139,11 +139,11 @@
 
 
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-plugin-api -->
-        <dependency>
+<!--        <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-plugin-api</artifactId>
             <version>2.11.0</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
