--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
         <repository>
             <id>nexus</id>
             <name>nexus repository for all Mirror.</name>
-            <url>http://maven.zuche.com/nexus/content/groups/public</url>
+            <url>http://maven.luckincoffee.com/nexus/content/groups/public</url>
         </repository>
     </repositories>
 
