--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,24 @@
             <version>2.10.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.13</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
+
+
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-plugin-api -->
 <!--        <dependency>
             <groupId>io.qameta.allure</groupId>
