--- a/src/main/resources/otpAutomation.properties
+++ b/src/main/resources/otpAutomation.properties
@@ -2,4 +2,14 @@
 retrycount=1
 
 # 默认zk配置
+test03.zk.address=zookeeper://10.218.21.27:5181
+test04.zk.address=zookeeper://10.218.18.141:5181
+pre.zk.address=zookeeper://10.223.3.69:5181
+dubbo.rpc.version=1.0.0
+dubbo.rpc.group=dubbo
+dubbo.rpc.appName=Automation
+
+
+
+
 
