--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,11 @@
             <version>1.2.58</version>
         </dependency>
 
-<!--        <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-            <version>1.9.3</version>
-        </dependency>-->
+        <!--        <dependency>
+                    <groupId>commons-beanutils</groupId>
+                    <artifactId>commons-beanutils</artifactId>
+                    <version>1.9.3</version>
+                </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
@@ -130,12 +130,12 @@
             <artifactId>json-unit</artifactId>
             <version>2.10.0</version>
         </dependency>
-<!--        <dependency>
-            <groupId>net.javacrumbs.json-unit</groupId>
-            <artifactId>json-unit</artifactId>
-            <version>2.10.0</version>
-            <scope>compile</scope>
-        </dependency>-->
+        <!--        <dependency>
+                    <groupId>net.javacrumbs.json-unit</groupId>
+                    <artifactId>json-unit</artifactId>
+                    <version>2.10.0</version>
+                    <scope>compile</scope>
+                </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
         <dependency>
@@ -152,12 +152,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-plugin-api -->
-<!--        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-plugin-api</artifactId>
-            <version>2.11.0</version>
-        </dependency>-->
-
+        <!--        <dependency>
+                    <groupId>io.qameta.allure</groupId>
+                    <artifactId>allure-plugin-api</artifactId>
+                    <version>2.11.0</version>
+                </dependency>-->
 
 
     </dependencies>
@@ -191,9 +190,9 @@
                 <version>2.20</version>
                 <configuration>
 
-     <!--               <suiteXmlFiles>
-                        <suiteXmlFile>./src/test/runxml/${CaseFile}/</suiteXmlFile>
-                    </suiteXmlFiles>-->
+                    <!--               <suiteXmlFiles>
+                                       <suiteXmlFile>./src/test/runxml/${CaseFile}/</suiteXmlFile>
+                                   </suiteXmlFiles>-->
 
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
@@ -209,6 +208,25 @@
                 </dependencies>
 
             </plugin>
+
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
