--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>otp.lucky</groupId>
-    <artifactId>OTP_Antomation</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>OTP_Automation</artifactId>
+    <version>1.2</version>
 
 
     <properties>
